objects/User.object
<CustomObject>
    <fields>
        <fullName>ByPassValidationRule__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ByPassValidationRule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ByPass_RV__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ByPass RV</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BypassTrigger__c</fullName>
        <label>BypassTrigger</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>TR001ManageContact</fullName>
                </value>
                <value>
                    <fullName>TR002ManageOpportunityLineItem</fullName>
                </value>
                <value>
                    <fullName>TR003ManageOpportunities</fullName>
                </value>
                <value>
                    <fullName>TR004ManageLead</fullName>
                </value>
                <value>
                    <fullName>TR005OppLineItem</fullName>
                </value>
                <value>
                    <fullName>TR_session_formation</fullName>
                </value>
                <value>
                    <fullName>TR006OppLineItem2FieldsNull</fullName>
                </value>
                <value>
                    <fullName>TR007Opp2FieldsNull</fullName>
                </value>
                <value>
                    <fullName>EventTriggerHandler</fullName>
                </value>
                <value>
                    <fullName>TaskTriggerHandler</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_de_fin_de_validite__c</fullName>
        <label>Date de fin de validité</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TECH_External_Id__c</fullName>
        <description>Champ technique qui contient la copie de l&apos;Id de l&apos;enregistrement 
en production</description>
        <externalId>true</externalId>
        <label>TECH_External_Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X18caracter__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>18caracter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>x18caracteres__c</fullName>
        <description>Id Salesforce de l&apos;utilisateur sur 18 caractères</description>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Id Salesforce de l&apos;utilisateur sur 18 caractères</inlineHelpText>
        <label>x18caracteres</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>Administrateur système</value>
        </filters>
        <label>Admin Users</label>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <label>Tous les utilisateurs</label>
        <language>fr</language>
    </listViews>
    <listViews>
        <fullName>Licence_Full</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>notEqual</operation>
            <value>Profil limité</value>
        </filters>
        <label>Licence Full</label>
        <language>fr</language>
    </listViews>
    <listViews>
        <fullName>Licence_Light</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>Profil limité</value>
        </filters>
        <label>Licence Light</label>
        <language>fr</language>
    </listViews>
    <listViews>
        <fullName>Utilisateurs_BBA</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USER_ROLE.NAME</field>
            <operation>equals</operation>
            <value>BBA</value>
        </filters>
        <label>Utilisateurs BBA</label>
        <language>fr</language>
    </listViews>
    <listViews>
        <fullName>Utilisateurs_Market_Recrutement</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USER_ROLE.NAME</field>
            <operation>equals</operation>
            <value>Market Recrutement</value>
        </filters>
        <label>Utilisateurs Market Recrutement</label>
        <language>fr</language>
    </listViews>
    <listViews>
        <fullName>Utilisateurs_Promo_Recrut_Master</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USER_ROLE.NAME</field>
            <operation>equals</operation>
            <value>Promo Recrut master</value>
        </filters>
        <label>Utilisateurs Promo Recrut Master</label>
        <language>fr</language>
    </listViews>
    <sharingModel>Read</sharingModel>
</CustomObject>